--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,7 +1,8 @@
 .navbar{
     display: flex;
-   background-color : rgb(239, 229, 229);
+   background-color : rgb(95, 85, 85);
 }
 .nav{
 padding: 5px 5px;
+color: white;
 }
