--- a/client/src/components/Client.css
+++ b/client/src/components/Client.css
@@ -2,19 +2,21 @@ table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  margin-top: 20px;
 }
 
 td,
 th {
-  border: 1px solid #dddddd;
-  text-align: left;
+  text-align: center;
   padding: 8px;
+  border-bottom: 1px solid rgb(200, 184, 184);
+
 }
 .button {
-  background-color: rgb(181, 33, 33);
+  background-color: rgb(200, 32, 3);
   color: white;
-  border: none;
-  border-radius: 5px;
+  border:1px solid black;
+ 
 }
 .spinner{
   height: 500px;
