--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -2,9 +2,16 @@
   display: flex;
   background-color: rgb(95, 85, 85);
   justify-content: space-between;
+  box-sizing: border-box;
+  
 }
 .nav {
   padding: 5px 5px;
   color: white;
   display: flex;
+  box-sizing: border-box;
+}
+.btn{
+  padding-top: 5px;
+  padding-right: 5px;
 }
