--- a/client/src/components/AddClientModel.css
+++ b/client/src/components/AddClientModel.css
@@ -1,10 +1,21 @@
 #myBtn {
-  border: 2px solid black;
-  height: 30px;
+  border: 1px solid black;
+  height: 43px;
   border-radius: 10px;
-  background-color: rgb(29, 64, 64);
+  background-color:rgb(17, 66, 66);
   color: white;
   cursor: pointer;
+  width: 94px;
+  font-size: 15px;
+}
+#myBtn2 {
+  border: 1px solid black;
+  height: 43px;
+  border-radius: 10px;
+  background-color: rgb(17, 170, 170);
+  color: white;
+  cursor: pointer;
+  font-size: 15px;
 }
 #myModal {
   position: absolute;
@@ -18,17 +29,18 @@
   width: 100%;
   height: 100%;
 }
-.close{
-    cursor: pointer;
-    position: absolute;
-    top: 10px;
-    right: 20px;
+.close {
+  cursor: pointer;
+  position: absolute;
+  top: 5px;
+  right: 20px;
+  color: black;
 }
-.modal-content{
-    display: flex;
-    flex-direction: column;
+.modal-content {
+  display: flex;
+  flex-direction: column;
 }
-input{
-    padding: 5px 5px;
-    margin: 5px 5px;
+input {
+  padding: 5px 5px;
+  margin: 5px 5px;
 }
