--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,17 +1,21 @@
 .navbar {
   display: flex;
-  background-color: rgb(95, 85, 85);
+  background-color: rgb(255, 0, 0);
   justify-content: space-between;
   box-sizing: border-box;
-  
+  width: 100%;
+  height: 60px;
 }
+.logo > img {
+  height: 59px;
+  width: 62px;
+}
+
 .nav {
   padding: 5px 5px;
   color: white;
   display: flex;
+  justify-content: space-between;
   box-sizing: border-box;
-}
-.btn{
-  padding-top: 5px;
-  padding-right: 5px;
+  width: 60%;
 }
