--- a/client/src/components/AddClientModel.css
+++ b/client/src/components/AddClientModel.css
@@ -2,11 +2,12 @@
   border: 1px solid black;
   height: 43px;
   border-radius: 10px;
-  background-color:rgb(17, 66, 66);
+  background-color:#11b332;
   color: white;
   cursor: pointer;
   width: 94px;
   font-size: 15px;
+  margin: 20px 20px;
 }
 #myBtn2 {
   border: 1px solid black;
