--- a/client/src/components/Client.css
+++ b/client/src/components/Client.css
@@ -9,9 +9,8 @@ td,
 th {
   text-align: center;
   padding-top: 20px;
-  border-bottom: 1px solid rgb(200, 184, 184);
-  
-
+  border-bottom: 1px solid rgb(246, 243, 243);
+  padding-bottom: 20px;
 }
 .button {
   background-color: rgb(200, 32, 3);
