--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,7 +1,7 @@
 .navbar {
   display: flex;
   background-color: rgb(255, 0, 0);
-  justify-content: space-between;
+  justify-content: center;
   box-sizing: border-box;
   width: 100%;
   height: 60px;
@@ -10,12 +10,8 @@
   height: 59px;
   width: 62px;
 }
-
-.nav {
-  padding: 5px 5px;
+.navbar > h1 {
+  padding-left: 10px;
+  padding-right: 10px;
   color: white;
-  display: flex;
-  justify-content: space-between;
-  box-sizing: border-box;
-  width: 60%;
 }
