--- a/client/src/components/AddProjectModel.css
+++ b/client/src/components/AddProjectModel.css
@@ -45,4 +45,12 @@
     padding: 5px 5px;
     margin: 5px 5px;
   }
+  textarea{
+    padding: 5px 5px;
+    margin: 5px 5px;
+  }
+  select{
+    padding: 5px 5px;
+    margin: 5px 5px;
+  }
   
