--- a/client/src/pages/Project.css
+++ b/client/src/pages/Project.css
@@ -29,15 +29,43 @@
   font-size: 14px;
   padding-top: 6px;
 }
-@media screen and (max-width:600px) {
-  .project{
+.deleteButton {
+  position: absolute;
+  top: 21rem;
+  right: 42rem;
+  height: 2.5rem;
+  width: 2.5rem;
+  background-color: #d51717;
+  border-radius: 6px;
+  color: white;
+}
+svg {
+  width: 1.3rem;
+  height: 2rem;
+}
+@media screen and (max-width: 600px) {
+  .project {
     display: flex;
     flex-direction: column;
     width: 90%;
   }
-  .back{
+  .back {
     position: relative;
     top: 1rem;
     left: 14rem;
+  }
+  .deleteButton {
+    position: absolute;
+    top: 19rem;
+    right:2rem;
+    height: 2.5rem;
+    width: 2.5rem;
+    background-color: #d51717;
+    border-radius: 6px;
+    color: white;
+  }
+  svg {
+    width: 1rem;
+    height: 1.5rem;
   }
 }
