--- a/client/src/components/AddProjectModel.css
+++ b/client/src/components/AddProjectModel.css
@@ -1,56 +1,59 @@
 #myBtn {
-    border: 1px solid black;
-    height: 43px;
-    border-radius: 10px;
-    background-color:#11b332;
-    color: white;
-    cursor: pointer;
-    width: 94px;
-    font-size: 15px;
-    margin: 20px 20px;
-  }
-  #myBtn2 {
-    border: 1px solid black;
-    height: 43px;
-    border-radius: 10px;
-    background-color: rgb(17, 170, 170);
-    color: white;
-    cursor: pointer;
-    font-size: 15px;
-  }
-  #myModal {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-    width: 100%;
-    height: 100%;
-  }
-  .close {
-    cursor: pointer;
-    position: absolute;
-    top: 5px;
-    right: 20px;
-    color: black;
-  }
-  .modal-content {
-    display: flex;
-    flex-direction: column;
-  }
-  input {
-    padding: 5px 5px;
-    margin: 5px 5px;
-  }
-  textarea{
-    padding: 5px 5px;
-    margin: 5px 5px;
-  }
-  select{
-    padding: 5px 5px;
-    margin: 5px 5px;
-  }
-  
+  border: 1px solid black;
+  height: 43px;
+  border-radius: 10px;
+  background-color: #11b332;
+  color: white;
+  cursor: pointer;
+  width: 94px;
+  font-size: 15px;
+  margin: 20px 20px;
+}
+#myBtn2 {
+  border: 1px solid black;
+  height: 43px;
+  border-radius: 10px;
+  background-color: rgb(17, 170, 170);
+  color: white;
+  cursor: pointer;
+  font-size: 15px;
+  margin-left: 22px;
+}
+#myModal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+}
+.close {
+  cursor: pointer;
+  position: absolute;
+  top: 5px;
+  right: 20px;
+  color: black;
+}
+.modal-content {
+  display: flex;
+  flex-direction: column;
+}
+input,
+textarea,
+select {
+  width: 100%;
+}
+input,
+textarea {
+  padding: 5px 5px;
+  margin: 5px 5px;
+}
+
+select {
+  padding: 5px 5px;
+  margin: 8px 12px;
+}
