--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -15,3 +15,28 @@
   padding-right: 10px;
   color: white;
 }
+.logout {
+  height: 44px;
+  width: 100px;
+  margin-top: 8px;
+  font-size: 20px;
+  border-radius: 12px;
+  background: #489127;
+  color: white;
+  cursor: pointer;
+  border: none;
+  margin-left: 50px;
+}
+@media screen and (max-width: 600px) {
+  .navbar {
+    height:80px;
+    display: flex;
+    background-color: rgb(255, 0, 0);
+    justify-content: center;
+    box-sizing: border-box;
+    width: 100%;
+  }
+  .logo>img{
+    height: 80px;
+  }
+}
